--- a/DreamLuso.Presentation/DreamLuso.Presentation/src/app/components/front-office/Pages/retrieve-all-properties/retrieve-all-properties.component.html
+++ b/DreamLuso.Presentation/DreamLuso.Presentation/src/app/components/front-office/Pages/retrieve-all-properties/retrieve-all-properties.component.html
@@ -227,22 +227,25 @@
     <!-- Pagination -->
     <div class="flex justify-center gap-2 mt-12">
       <button
-        class="px-4 py-2 rounded-lg bg-neutral-700 text-neutral-900 disabled:opacity-50"
+        class="px-4 py-2 rounded-lg bg-neutral-200 text-neutral-500 hover:bg-neutral-300 disabled:opacity-50 transition duration-300"
         [disabled]="currentPage === 1"
         (click)="currentPage = currentPage - 1"
       >
         Previous
       </button>
+
       <button
-        class="px-4 py-2 rounded-lg bg-neutral-700 text-neutral-900"
+        class="px-4 py-2 rounded-lg bg-neutral-200 text-neutral-500 hover:bg-neutral-300 transition duration-300"
         *ngFor="let page of [].constructor(totalPages); let i = index"
-        [class.bg-neutral-2000]="currentPage === i + 1"
+        [class.bg-green-500]="currentPage === i + 1"
+        [class.text-white]="currentPage === i + 1"
         (click)="currentPage = i + 1"
       >
         {{ i + 1 }}
       </button>
+
       <button
-        class="px-4 py-2 rounded-lg bg-neutral-700 text-neutral-900 disabled:opacity-50"
+        class="px-4 py-2 rounded-lg bg-neutral-200 text-neutral-500 hover:bg-neutral-300 disabled:opacity-50 transition duration-300"
         [disabled]="currentPage === totalPages"
         (click)="currentPage = currentPage + 1"
       >
@@ -251,24 +254,24 @@
     </div>
   </div>
 
-  <!-- Home Button -->
-  <a
-    routerLink="/"
-    class="fixed bottom-8 right-8 bg-gray-600 hover:bg-gray-700 text-white rounded-full p-4 transition duration-300 ease-in-out"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      class="size-6"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
-      />
-    </svg>
-  </a>
+    <!-- Home Button -->
+<a
+routerLink="/"
+class="fixed bottom-8 right-8 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 transition duration-300 ease-in-out"
+>
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  fill="none"
+  viewBox="0 0 24 24"
+  stroke-width="1.5"
+  stroke="currentColor"
+  class="size-6"
+>
+  <path
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
+  />
+</svg>
+</a>
 </section>
