--- a/DreamLuso.Presentation/DreamLuso.Presentation/src/app/components/front-office/Pages/retrieve-property-id/retrieve-property-id.component.html
+++ b/DreamLuso.Presentation/DreamLuso.Presentation/src/app/components/front-office/Pages/retrieve-property-id/retrieve-property-id.component.html
@@ -115,75 +115,35 @@
     </div>
 
     <!-- Property Specs with Icons -->
+
     <div class="flex gap-10 mb-10">
       <div class="p-4 rounded-lg flex items-center space-x-2">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 text-neutral-400"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-        >
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-neutral-400" viewBox="0 0 24 24" fill="currentColor">
           <path d="M..."></path>
         </svg>
         <div>
-          <span class="text-neutral-400 text-sm font-medium block"
-            >Bedrooms</span
-          >
-          <span class="text-5xl text-neutral-900 font-bold font-poppins">{{
-            property.bedrooms
-          }}</span>
+          <span class="text-neutral-400 text-sm font-medium block">Bedrooms</span>
+          <span class="text-5xl text-neutral-900 font-bold font-poppins">{{ property.bedrooms }}</span>
         </div>
       </div>
+
       <div class="p-4 rounded-lg flex items-center space-x-2">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 text-neutral-400"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-        >
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-neutral-400" viewBox="0 0 24 24" fill="currentColor">
           <path d="M..."></path>
         </svg>
         <div>
-          <span class="text-neutral-400 text-sm font-medium block"
-            >Bathrooms</span
-          >
-          <span class="text-5xl text-neutral-900 font-bold font-poppins">{{
-            property.bathrooms
-          }}</span>
+          <span class="text-neutral-400 text-sm font-medium block">Bathrooms</span>
+          <span class="text-5xl text-neutral-900 font-bold font-poppins">{{ property.bathrooms }}</span>
         </div>
       </div>
+
       <div class="p-4 rounded-lg flex items-center space-x-2">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 text-neutral-400"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-        >
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-neutral-400" viewBox="0 0 24 24" fill="currentColor">
           <path d="M..."></path>
         </svg>
         <div>
           <span class="text-neutral-400 text-sm font-medium block">Size</span>
-          <span class="text-5xl text-neutral-900 font-bold font-poppins"
-            >{{ property.size }}m²</span
-          >
-        </div>
-      </div>
-      <div class="p-4 rounded-lg flex items-center space-x-2">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 text-neutral-400"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-        >
-          <path d="M..."></path>
-        </svg>
-        <div>
-          <span class="text-neutral-400 text-sm font-medium block"
-            >Year Built</span
-          >
-          <span class="text-5xl text-neutral-900 font-bold font-poppins">{{
-            property.yearBuilt | date : "yyyy"
-          }}</span>
+          <span class="text-5xl text-neutral-900 font-bold font-poppins">{{ property.size }}m²</span>
         </div>
       </div>
     </div>
